# big-luca-bot

./: CHANGELOG.md  Cargo.toml  Procfile  README.md  big-luca-bot.sh
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  coverage.yml
config/: parameters.json
docs/: commands.txt
src/: main.rs
src/big_luca/: answer.rs  aphorism.rs  automatize.rs  commands.rs  config.rs  instagram.rs  mod.rs  parameters.rs  redis.rs  repository.rs  rsshub.rs  stickers.rs  youtube.rs
src/feed/: mod.rs
src/redis/: mod.rs
src/repository/: chat.rs  mod.rs
src/rsshub/: errors.rs  mod.rs
src/utils/: mod.rs
src/utils/str/: mod.rs
src/youtube/: errors.rs  feed.rs  mod.rs
tests/: docker-compose.yml
