[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["multimedia"]
description = "A telegram bot to be always up to date with the \"Papi\"'s news"
edition = "2021"
homepage = "https://github.com/veeso/big-luca-bot"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bot", "telegram", "telegram-bot", "big-luca"]
license = "Unlicense"
name = "big-luca-bot"
readme = "README.md"
repository = "https://github.com/veeso/big-luca-bot"
version = "0.1.2"

[[bin]]
name = "big-luca-bot"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
feed-rs = "^1.1.0"
futures = "^0.3"
lazy-regex = "^2.3.0"
lazy_static = "^1.4.0"
once_cell = "^1.13"
rand = "0.8.5"
reqwest = { version = "^0.11", features = [ "rustls-tls" ] }
sqlx = { version = "^0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
teloxide = { version = "^0.10", features = ["macros", "auto-send", "rustls", "webhooks", "webhooks-axum"] }
thiserror = "^1.0"
tokio = { version = "1.20.1", features = [ "full" ] }
tokio-cron-scheduler = "^0.8"
tracing = "^0.1"
tracing-subscriber = "^0.2"
url = "2.2.2"

[dev-dependencies]
pretty_assertions = "^1.2.1"
tempfile = "^3.2.0"
